k8s/production/backup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backup
  labels:
    name: backup
